# ai-image-upscale-mvp

./: .env.example  .gitignore  README.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py  quality.py  schemas.py  semantic_controller.py  storage.py  vision_regions.py
apps/api/app/inference/: __init__.py  base.py  diffusion.py  optional_models.py  realesrgan.py  stub.py
apps/api/app/jobs/: __init__.py  router.py  service.py
apps/api/app/workers/: upscale_worker.py
apps/api/tests/: conftest.py  test_feedback_api.py  test_health.py  test_inference_stub.py  test_jobs_api.py  test_logo_detector_baseline.py  test_models.py  test_optional_model_adapter.py  test_quality.py  test_realesrgan_adapter.py  test_region_detector_eval.py  test_schemas.py  test_semantic_controller.py  test_smoke_acceptance_runner.py  test_storage.py  test_vision_regions.py  test_worker.py
infra/: docker-compose.yml
reports/: README.md  region-detector-eval-local.md  region-detector-eval-tesseract-fallback.csv  region-detector-eval-tesseract-fallback.md  region-detector-eval-tesseract-logo-baseline.csv  region-detector-eval-tesseract.csv  region-detector-eval-tesseract.md
scripts/: check_hat.ps1  check_realesrgan.ps1  check_swinir.ps1  check_tesseract.ps1  install_realesrgan.ps1  run_region_detector_eval.ps1  start_api_demo.ps1  start_web_demo.ps1
tools/: evaluate_region_detector.py  generate_region_eval_synthetic_samples.py  logo_detector_baseline.py  run_hat_external.py  run_smoke_acceptance.py  run_swinir_external.py
(+30 files in other folders)
